Motion Path - Changing endframe clamps startframe to 1 #70891

Closed
opened 2019-10-17 11:15:20 +02:00 by iurimonteiro · 14 comments

System Information
Operating system: Windows 10 Pro 64 bits (10.0, compilation 17134)
Graphics card: AMD Ryzen 5 1500x Quad-Core Processor

Blender Version 2.8 Official release

Motion path changing number automatic and path update

Exact steps for others to reproduce the error

GIF - https://giphy.com/gifs/jovteyAEQr21IYJW1o

  • Go to the motion path field, set the start frame to 0.
  • Change the end frame and press {key Enter}.

See that the starting frame changes from 0 to 1.

Thank you for your time.

**System Information** Operating system: Windows 10 Pro 64 bits (10.0, compilation 17134) Graphics card: AMD Ryzen 5 1500x Quad-Core Processor **Blender Version 2.8 Official release** **Motion path changing number automatic and path update** **Exact steps for others to reproduce the error** GIF - https://giphy.com/gifs/jovteyAEQr21IYJW1o - Go to the motion path field, set the start frame to 0. - Change the end frame and press {key Enter}. # See that the starting frame changes from 0 to 1. Thank you for your time.
Author

Added subscriber: @iurimonteiro

Added subscriber: @iurimonteiro
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This looks like #70381 (Motion Paths off by one) (will quickly check if the Frame Range Start issue is actually the same thing...)
For bug (2), please refer to #70381 already...

This looks like #70381 (Motion Paths off by one) (will quickly check if the `Frame Range Start` issue is actually the same thing...) For bug (2), please refer to #70381 already...
Philipp Oeser self-assigned this 2019-10-17 12:13:55 +02:00
Member

Might be a problem in rna_AnimViz_path_end_frame_set, 0049c22ad9.
I think this is best checked together with #70381 (but not the same issue on first sight -- even though related).
Needs a bit more investigation, will claim for now...

Might be a problem in `rna_AnimViz_path_end_frame_set`, 0049c22ad9. I think this is best checked together with #70381 (but not the same issue on first sight -- even though related). Needs a bit more investigation, will claim for now...
Philipp Oeser changed title from Motion Path - Changing number automatic and path update to Motion Path - Changing endframe clamps startframe to 1 2019-10-17 12:15:32 +02:00

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'

Go to the motion path field, place the start frame to 0, change the end frame from any number to another number, exemple, 250 to 30. Then when you press enter the starting frame will always change from 0 to 1 and you have to change the starting frame number again.

Can't reproduce this

you have the motion path already done, you change from 0-30 to 0-45 or any other lenth then you press Update range and noting happens, he doesnt change from 0-30 to 0-45 he keeps at 0-30. You need to always delete and make it again.

form manual https://docs.blender.org/manual/en/latest/animation/motion_paths.html

If a path has already been calculated, Update Paths will update the path shape to the current animation. To change the frame range of the calculated path, you need to delete the path and calculate it again.

So not a bug technically

Am I doing anything wrong? Is this still an issue with latest build? https://builder.blender.org/download/

>Go to the motion path field, place the start frame to 0, change the end frame from any number to another number, exemple, 250 to 30. Then when you press enter the starting frame will always change from 0 to 1 and you have to change the starting frame number again. Can't reproduce this > you have the motion path already done, you change from 0-30 to 0-45 or any other lenth then you press Update range and noting happens, he doesnt change from 0-30 to 0-45 he keeps at 0-30. You need to always delete and make it again. form manual https://docs.blender.org/manual/en/latest/animation/motion_paths.html ``` If a path has already been calculated, Update Paths will update the path shape to the current animation. To change the frame range of the calculated path, you need to delete the path and calculate it again. ``` So not a bug technically Am I doing anything wrong? Is this still an issue with latest build? https://builder.blender.org/download/
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Changing endframe clamps startframe to 1 is still an "issue", yes.
Still need to do the investigation, but yes it is...

Changing endframe clamps startframe to 1 is still an "issue", yes. Still need to do the investigation, but yes it is...

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

2 bug, you have the motion path already done, you change from 0-30 to 0-45 or any other lenth then you press Update range and noting happens

Don't report two bugs in one report. I'm going to remove this from the report as @iss already showed this is by design.

> 2 bug, you have the motion path already done, you change from 0-30 to 0-45 or any other lenth then you press Update range and noting happens Don't report two bugs in one report. I'm going to remove this from the report as @iss already showed this is by design.

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Philipp Oeser was unassigned by Sybren A. Stüvel 2020-01-21 11:43:36 +01:00
Sybren A. Stüvel self-assigned this 2020-01-21 11:43:36 +01:00

This issue was referenced by 40d71fc642

This issue was referenced by 40d71fc6428c462ca4d5eb35206baf334072497c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.82 milestone 2023-02-08 16:41:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70891
No description provided.